@@ -1,5 +1,10 @@
 2001-12-20  Bradford Hovinen  <hovinen@ximian.com>
 
+	* All: Eliminate compiler warnings
+
+	* gnome-settings-daemon.h: Use __GNOME_SETTINGS_DAEMON_H for the
+	enclosing macro
+
 	* gnome-settings-background.c: Update
 
 2001-12-19  Bradford Hovinen  <hovinen@ximian.com>
